--- a/_posts/1966-11-14-GEMINI_12.md
+++ b/_posts/1966-11-14-GEMINI_12.md
@@ -8,7 +8,7 @@ author: "NASA: Music to Wake Up By"
 ### DATE: November 14, 1966
 ----
 My Favorite Things by Julie Andrews
-Going Back to Houston by UNKNOWN
+Houston by Dean Martin
 
 ##### Comment:
 * Mission Commentary Tape 240, page 2 to Mission Commentary Tape 242, page 1
