--- a/_posts/1969-05-26-APOLLO_10.md
+++ b/_posts/1969-05-26-APOLLO_10.md
@@ -7,7 +7,7 @@ author: "NASA: Music to Wake Up By"
 ----
 ### DATE: May 26, 1969
 ----
-Bugle call for reveille by UNKNOWN
+Reveille (Bugle Call) by UNKNOWN
 
 ##### Comment:
 * No mission comment
