--- a/_posts/1973-09-25-SKYLAB_3.md
+++ b/_posts/1973-09-25-SKYLAB_3.md
@@ -7,7 +7,7 @@ author: "NASA: Music to Wake Up By"
 ----
 ### DATE: September 25, 1973
 ----
-Going Back to Houston (Sic), probably Houston by Dean Martin
+Houston by Dean Martin
 
 ##### Comment:
-* No mission comment
+* Going Back to Houston (Sic), probably Houston.
