--- a/_posts/1983-06-21-STS-7.md
+++ b/_posts/1983-06-21-STS-7.md
@@ -8,10 +8,10 @@ author: "NASA: Music to Wake Up By"
 ### DATE: June 21, 1983
 ----
 Texas Aggie War Hymn by UNKNOWN
-Reveille by UNKNOWN
+Reveille (Bugle Call) by UNKNOWN
 When You're Smiling by Mary Cleave's father
 Tequila Sunrise by UNKNOWN
 
 ##### Comment:
-* Mary Cleave, the CAPCOM for this crew
+* Mary Cleave's father was the CAPCOM for this crew
 and in response by CHallenger (some version of Tequila Sunrise)
