--- a/_posts/1983-06-23-STS-7.md
+++ b/_posts/1983-06-23-STS-7.md
@@ -14,4 +14,4 @@ A Hard Day's Night by The Beatles
 ##### Comment:
 * The uplink music
 which of course is the alma mater of Dr. Sally Ride and
-it sounded like the crew down linked a Beatles' song, A Hard Day's Night. From STS-7 AIR/GROUND TRANSCRIPT
+It sounded like the crew down linked a Beatles' song, A Hard Day's Night. From STS-7 AIR/GROUND TRANSCRIPT
