--- a/_posts/1984-11-09-STS-51-A.md
+++ b/_posts/1984-11-09-STS-51-A.md
@@ -8,7 +8,7 @@ author: "NASA: Music to Wake Up By"
 ### DATE: November 09, 1984
 ----
 Good Morning Starshine from the musical Hair by UNKNOWN
-Good Day Sunshine by The Beatles.
+Good Day Sunshine by The Beatles
 
 ##### Comment:
 * No mission comment
