--- a/_posts/1989-05-05-STS-30.md
+++ b/_posts/1989-05-05-STS-30.md
@@ -7,7 +7,7 @@ author: "NASA: Music to Wake Up By"
 ----
 ### DATE: May 05, 1989
 ----
-Theme music from the film, Superman by John Williams
+Superman (Main Title) by John Williams
 
 ##### Comment:
 * No mission comment
