--- a/_posts/1989-10-19-STS-34.md
+++ b/_posts/1989-10-19-STS-34.md
@@ -8,7 +8,7 @@ author: "NASA: Music to Wake Up By"
 ### DATE: October 19, 1989
 ----
 Hail Purdue by UNKNOWN
-Reveille by UNKNOWN
+Reveille (Bugle Call) by UNKNOWN
 Anchors Aweigh by UNKNOWN
 
 ##### Comment:
