--- a/_posts/1991-11-26-STS-44.md
+++ b/_posts/1991-11-26-STS-44.md
@@ -7,8 +7,8 @@ author: "NASA: Music to Wake Up By"
 ----
 ### DATE: November 26, 1991
 ----
-Reveille (bugle call) followed by gunfire
+Reveille (Bugle Call) by gunfire
 This is the Army, Mr. Jones by Irving Berlin
 
 ##### Comment:
-* from the movie, This is the Army.
+* From the movie, 'This is the Army'.
