--- a/_posts/1993-09-18-STS-51.md
+++ b/_posts/1993-09-18-STS-51.md
@@ -8,8 +8,8 @@ author: "NASA: Music to Wake Up By"
 ### DATE: September 18, 1993
 ----
 A Whole New World by Lea Salonga, Brad Kane
-Star Wars Theme by John Williams
+Star Wars (Main Title) by John Williams
 
 ##### Comment:
 * Crew for Mission Control
-sent to Discovery.
+Sent to Discovery.
