--- a/_posts/1996-06-24-STS-78.md
+++ b/_posts/1996-06-24-STS-78.md
@@ -7,7 +7,7 @@ author: "NASA: Music to Wake Up By"
 ----
 ### DATE: June 24, 1996
 ----
-Space Oddity by David Bowie. The Major Tom
+Space Oddity by David Bowie
 
 ##### Comment:
-* reference is to Tom Henricks.
+* The major tom reference is to Tom Henricks.
