--- a/_posts/1998-11-03-STS-95.md
+++ b/_posts/1998-11-03-STS-95.md
@@ -7,7 +7,7 @@ author: "NASA: Music to Wake Up By"
 ----
 ### DATE: November 03, 1998
 ----
-The House is Rockin' by Stevie Ray Vaughn
+The House is Rockin' by Stevie Ray Vaughan
 
 ##### Comment:
 * In honor of Mission Specialist Steve Robinson known as Stevie Ray Robinson by other members of his astronaut band, Max Q. That's what I call wake-up music. Good day to go get a satellite, he told Mission Control.
