--- a/_posts/2000-02-19-STS-101.md
+++ b/_posts/2000-02-19-STS-101.md
@@ -10,4 +10,4 @@ author: "NASA: Music to Wake Up By"
 Free Fallin' by Tom Petty
 
 ##### Comment:
-* played for Mission Specialist Susan Helms
+* Played for mission specialist Susan Helms
