--- a/_posts/2000-02-20-STS-101.md
+++ b/_posts/2000-02-20-STS-101.md
@@ -10,4 +10,4 @@ author: "NASA: Music to Wake Up By"
 Shining Brightly by Bob Seger
 
 ##### Comment:
-* in honor of the upcoming evening rendezvous with the International Space Station.
+* In honor of the upcoming evening rendezvous with the International Space Station.
