--- a/_posts/2008-11-16-STS-126.md
+++ b/_posts/2008-11-16-STS-126.md
@@ -7,7 +7,7 @@ author: "NASA: Music to Wake Up By"
 ----
 ### DATE: November 16, 2008
 ----
-Start Me Up by the Rolling Stones
+Start Me Up by The Rolling Stones
 
 ##### Comment:
 * It was played for Mission Specialist Sandra Magnus. I want to thank my family for that music and I'm looking forward to moving into my new home today, Magnus radioed down to Mission Control in Houston.
