--- a/_posts/2009-03-18-STS-119.md
+++ b/_posts/2009-03-18-STS-119.md
@@ -10,4 +10,4 @@ author: "NASA: Music to Wake Up By"
 I Walk the Line by Johnny Cash
 
 ##### Comment:
-* was played for Steve Swanson.
+* Played for Steve Swanson.
