--- a/_posts/2009-07-19-STS-127.md
+++ b/_posts/2009-07-19-STS-127.md
@@ -7,7 +7,7 @@ author: "NASA: Music to Wake Up By"
 ----
 ### DATE: July 19, 2009
 ----
-Learning to Fly, by Tom Petty and the Heartbreakers
+Learning to Fly by Tom Petty
 
 ##### Comment:
-* for former Navy SEAL Chris Cassidy, who is making his first space flight aboard the space shuttle Endeavour .
+* For former Navy SEAL Chris Cassidy, who is making his first space flight aboard the space shuttle Endeavour .
