--- a/_posts/2010-02-17-STS-130.md
+++ b/_posts/2010-02-17-STS-130.md
@@ -7,7 +7,7 @@ author: "NASA: Music to Wake Up By"
 ----
 ### DATE: February 17, 2010
 ----
-Oh Yeah by Johnny A.
+Oh Yeah by Johnny A
 
 ##### Comment:
-* played for Mission Specialist Stephen Robinson.
+* Played for Mission Specialist Stephen Robinson.
