--- a/_posts/2011-07-15-STS-135.md
+++ b/_posts/2011-07-15-STS-135.md
@@ -10,4 +10,4 @@ author: "NASA: Music to Wake Up By"
 Good Day Sunshine by The Beatles
 
 ##### Comment:
-* Sir Paul McCartney greeted the Atlantis crew with the Beatles favorite Good Day Sunshine. Good morning guys, wake up! And good luck on this, your last mission. Well done, McCartney said in a message recorded pre-launch for the final space shuttle crew.
+* Sir Paul McCartney greeted the Atlantis crew with The Beatles favorite Good Day Sunshine. Good morning guys, wake up! And good luck on this, your last mission. Well done, McCartney said in a message recorded pre-launch for the final space shuttle crew.
