--- a/_posts/1974-02-08-SKYLAB_4.md
+++ b/_posts/1974-02-08-SKYLAB_4.md
@@ -7,7 +7,7 @@ author: "NASA: Music to Wake Up By"
 ----
 ### DATE: February 08, 1974
 ----
-Goin'Back to Houston by Dean Martin
+Houston by Dean Martin
 
 ##### Comment:
 * No mission comment
