--- a/_posts/1988-12-05-STS-27.md
+++ b/_posts/1988-12-05-STS-27.md
@@ -7,7 +7,7 @@ author: "NASA: Music to Wake Up By"
 ----
 ### DATE: December 05, 1988
 ----
-Star Wars by John Williams
+Star Wars (Main Title) by John Williams
 Do You Want to Know a Secret? by The Beatles
 
 ##### Comment:
