--- a/_posts/1995-09-12-STS-69.md
+++ b/_posts/1995-09-12-STS-69.md
@@ -7,7 +7,7 @@ author: "NASA: Music to Wake Up By"
 ----
 ### DATE: September 12, 1995
 ----
-A Hard Day's Night by The Beatles.
+A Hard Day's Night by The Beatles
 
 ##### Comment:
 * No mission comment
