--- a/_posts/1996-06-21-STS-78.md
+++ b/_posts/1996-06-21-STS-78.md
@@ -7,7 +7,7 @@ author: "NASA: Music to Wake Up By"
 ----
 ### DATE: June 21, 1996
 ----
-Free Fallin' by Tom Petty.
+Free Fallin' by Tom Petty
 
 ##### Comment:
 * No mission comment
