--- a/_posts/2001-03-13-STS-102.md
+++ b/_posts/2001-03-13-STS-102.md
@@ -10,4 +10,4 @@ author: "NASA: Music to Wake Up By"
 Free Fallin' by Tom Petty
 
 ##### Comment:
-* a favorite of astronaut Susan Helms who today will take up official residence on the station as a member of the outpost's second crew.
+* A favorite of astronaut Susan Helms who today will take up official residence on the station as a member of the outpost's second crew.
