--- a/_posts/2005-08-08-STS-114.md
+++ b/_posts/2005-08-08-STS-114.md
@@ -7,7 +7,7 @@ author: "NASA: Music to Wake Up By"
 ----
 ### DATE: August 08, 2005
 ----
-Good Day Sunshine by The Beatles.
+Good Day Sunshine by The Beatles
 
 ##### Comment:
 * No mission comment
