Create search mechanism using lunr.js approach

--- a/_pages/404.md
+++ b/_pages/404.md
@@ -1,5 +1,5 @@
 ---
-layout: post
+layout: general
 permalink: /404.html
 author: "NASA: Music to wake up by"
 ---
@@ -9,4 +9,6 @@ author: "NASA: Music to wake up by"
 I'm sorry. [nasawakeupcalls.github.io](https://nasawakeupcalls.github.io)
 cannot reach CAPCOM at this time. Please let me know the source of this signal
 failure if you believe there should be a page here. Please go ahead and create
-a ticket in [Github Issues](https://github.com/nasawakeupcalls/nasawakeupcalls.github.io/issues).
+a ticket in [Github Issues][404-1].
+
+[404-1]: https://github.com/nasawakeupcalls/nasawakeupcalls.github.io/issues
